--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,7 +21,7 @@ body {
     #cb0e08,
     #000000
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  -wekit-font-smoothing: antialiased !important;
+  -webkit-font-smoothing: antialiased !important;
 }
 
 body,
